(foreign_library
 (archive_name boxroot)
 (language c)
 (names
  boxroot
  dll_boxroot
  bitmap_boxroot
  rem_boxroot
  ocaml_hooks
  platform
  arena)
 (flags
  -DENABLE_BOXROOT_MUTEX=%{env:ENABLE_BOXROOT_MUTEX=1}
  -DENABLE_BOXROOT_GENERATIONAL=%{env:ENABLE_BOXROOT_GENERATIONAL=1}
  -DBOXROOT_DEBUG=%{env:BOXROOT_DEBUG=0}
  -Wall
  -Wpointer-arith
  -Wcast-qual
  -Wsign-compare
  -O2
  -fno-strict-aliasing))
